--- a/app/views/checkout/sandbox.html.erb
+++ b/app/views/checkout/sandbox.html.erb
@@ -10,12 +10,18 @@
 
     <%= turbo_stream_from @order %>
 
-    <button type="button" data-action="click->modal#open" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded transition duration-200 flex items-center justify-center gap-2 shadow-md">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" />
-      </svg>
-      Pagar Boleto & Ver Recibo
-    </button>
+    <div id="payment_area">
+      <% if @order.payment_accepted? %>
+        <%= render "checkout/success_button" %>
+      <% else %>
+        <button type="button" data-action="click->modal#open" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded transition duration-200 flex items-center justify-center gap-2 shadow-md">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 9V7a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2m2 4h10a2 2 0 002-2v-6a2 2 0 00-2-2H9a2 2 0 00-2 2v6a2 2 0 002 2zm7-5a2 2 0 11-4 0 2 2 0 014 0z" />
+          </svg>
+          Pagar Boleto & Ver Recibo
+        </button>
+      <% end %>
+    </div>
 
   </div>
 
